// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots StepsIcons Computer 1`] = `
<RNSVGSvgView
  align="xMidYMid"
  bbHeight="30"
  bbWidth="30"
  color="red"
  meetOrSlice={0}
  minX={0}
  minY={0}
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
      },
      undefined,
      false,
      Object {
        "flex": 0,
        "height": 30,
        "width": 30,
      },
    ]
  }
  vbHeight={24}
  vbWidth={24}
>
  <RNSVGPath
    d="M0 0h24v24H0z"
    fill={null}
    fillOpacity={1}
    fillRule={1}
    matrix={
      Array [
        1,
        0,
        0,
        1,
        0,
        0,
      ]
    }
    opacity={1}
    originX={0}
    originY={0}
    propList={
      Array [
        "fill",
      ]
    }
    rotation={0}
    scaleX={1}
    scaleY={1}
    skewX={0}
    skewY={0}
    stroke={null}
    strokeDasharray={null}
    strokeDashoffset={null}
    strokeLinecap={0}
    strokeLinejoin={0}
    strokeMiterlimit={4}
    strokeOpacity={1}
    strokeWidth="1"
    x={0}
    y={0}
  />
  <RNSVGPath
    d="M22 3H2C.897 3 0 3.896 0 5v13c0 1.103.897 2 2 2h9v2H7v2h10v-2h-4v-2h9c1.103 0 2-.897 2-2V5c0-1.104-.897-2-2-2zm0 2l-.002 10H2V5h20zM2 18v-1h19.997v1H2z"
    fill={
      Array [
        0,
        1,
        0,
        0,
        1,
      ]
    }
    fillOpacity={1}
    fillRule={1}
    matrix={
      Array [
        1,
        0,
        0,
        1,
        0,
        0,
      ]
    }
    opacity={1}
    originX={0}
    originY={0}
    propList={
      Array [
        "fill",
      ]
    }
    rotation={0}
    scaleX={1}
    scaleY={1}
    skewX={0}
    skewY={0}
    stroke={null}
    strokeDasharray={null}
    strokeDashoffset={null}
    strokeLinecap={0}
    strokeLinejoin={0}
    strokeMiterlimit={4}
    strokeOpacity={1}
    strokeWidth="1"
    x={0}
    y={0}
  />
</RNSVGSvgView>
`;

exports[`Storyshots StepsIcons Qr-code 1`] = `
<RNSVGSvgView
  align="xMidYMid"
  bbHeight="30"
  bbWidth="30"
  color="red"
  meetOrSlice={0}
  minX={0}
  minY={0}
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
      },
      undefined,
      false,
      Object {
        "flex": 0,
        "height": 30,
        "width": 30,
      },
    ]
  }
  vbHeight={25}
  vbWidth={25}
>
  <RNSVGPath
    d="M25 14.6v-4.2h-2.3c-.3-1.3-.8-2.6-1.5-3.7l1.6-1.6-2.9-2.9-1.6 1.6c-1.1-.7-2.3-1.3-3.6-1.5V0h-4.2v2.3c-1.3.3-2.6.8-3.7 1.5L5.2 2.2 2.3 5.1l1.6 1.6C3.2 7.8 2.6 9 2.4 10.4H0v4.2h2.3c.3 1.3.8 2.6 1.5 3.7l-1.6 1.6 2.9 2.9 1.6-1.6c1.1.7 2.3 1.3 3.7 1.5V25h4.2v-2.3c1.3-.3 2.6-.8 3.7-1.5l1.6 1.6 2.9-2.9-1.6-1.6c.7-1.1 1.3-2.3 1.5-3.6H25v-.1zm-12.5 2.1c-2.3 0-4.2-1.9-4.2-4.2s1.9-4.2 4.2-4.2c2.3 0 4.2 1.9 4.2 4.2s-1.9 4.2-4.2 4.2z"
    fill={
      Array [
        0,
        1,
        0,
        0,
        1,
      ]
    }
    fillOpacity={1}
    fillRule={1}
    matrix={
      Array [
        1,
        0,
        0,
        1,
        0,
        0,
      ]
    }
    opacity={1}
    originX={0}
    originY={0}
    propList={
      Array [
        "fill",
      ]
    }
    rotation={0}
    scaleX={1}
    scaleY={1}
    skewX={0}
    skewY={0}
    stroke={null}
    strokeDasharray={null}
    strokeDashoffset={null}
    strokeLinecap={0}
    strokeLinejoin={0}
    strokeMiterlimit={4}
    strokeOpacity={1}
    strokeWidth="1"
    x={0}
    y={0}
  />
</RNSVGSvgView>
`;

exports[`Storyshots StepsIcons Settings 1`] = `
<RNSVGSvgView
  align="xMidYMid"
  bbHeight="30"
  bbWidth="30"
  color="red"
  meetOrSlice={0}
  minX={0}
  minY={0}
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
      },
      undefined,
      false,
      Object {
        "flex": 0,
        "height": 30,
        "width": 30,
      },
    ]
  }
  vbHeight={25}
  vbWidth={25}
>
  <RNSVGPath
    d="M25 14.6v-4.2h-2.3c-.3-1.3-.8-2.6-1.5-3.7l1.6-1.6-2.9-2.9-1.6 1.6c-1.1-.7-2.3-1.3-3.6-1.5V0h-4.2v2.3c-1.3.3-2.6.8-3.7 1.5L5.2 2.2 2.3 5.1l1.6 1.6C3.2 7.8 2.6 9 2.4 10.4H0v4.2h2.3c.3 1.3.8 2.6 1.5 3.7l-1.6 1.6 2.9 2.9 1.6-1.6c1.1.7 2.3 1.3 3.7 1.5V25h4.2v-2.3c1.3-.3 2.6-.8 3.7-1.5l1.6 1.6 2.9-2.9-1.6-1.6c.7-1.1 1.3-2.3 1.5-3.6H25v-.1zm-12.5 2.1c-2.3 0-4.2-1.9-4.2-4.2s1.9-4.2 4.2-4.2c2.3 0 4.2 1.9 4.2 4.2s-1.9 4.2-4.2 4.2z"
    fill={
      Array [
        0,
        1,
        0,
        0,
        1,
      ]
    }
    fillOpacity={1}
    fillRule={1}
    matrix={
      Array [
        1,
        0,
        0,
        1,
        0,
        0,
      ]
    }
    opacity={1}
    originX={0}
    originY={0}
    propList={
      Array [
        "fill",
      ]
    }
    rotation={0}
    scaleX={1}
    scaleY={1}
    skewX={0}
    skewY={0}
    stroke={null}
    strokeDasharray={null}
    strokeDashoffset={null}
    strokeLinecap={0}
    strokeLinejoin={0}
    strokeMiterlimit={4}
    strokeOpacity={1}
    strokeWidth="1"
    x={0}
    y={0}
  />
</RNSVGSvgView>
`;

exports[`Storyshots StepsIcons Target 1`] = `
<RNSVGSvgView
  align="xMidYMid"
  bbHeight="30"
  bbWidth="30"
  color="red"
  meetOrSlice={0}
  minX={0}
  minY={0}
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
      },
      undefined,
      false,
      Object {
        "flex": 0,
        "height": 30,
        "width": 30,
      },
    ]
  }
  vbHeight={30}
  vbWidth={30}
>
  <RNSVGPath
    d="M15 0C6.7 0 0 6.7 0 15s6.7 15 15 15 15-6.7 15-15S23.3 0 15 0zm0 27C8.4 27 3 21.6 3 15S8.4 3 15 3s12 5.4 12 12-5.4 12-12 12z"
    fill={
      Array [
        0,
        1,
        0,
        0,
        1,
      ]
    }
    fillOpacity={1}
    fillRule={1}
    matrix={
      Array [
        1,
        0,
        0,
        1,
        0,
        0,
      ]
    }
    opacity={1}
    originX={0}
    originY={0}
    propList={
      Array [
        "fill",
      ]
    }
    rotation={0}
    scaleX={1}
    scaleY={1}
    skewX={0}
    skewY={0}
    stroke={null}
    strokeDasharray={null}
    strokeDashoffset={null}
    strokeLinecap={0}
    strokeLinejoin={0}
    strokeMiterlimit={4}
    strokeOpacity={1}
    strokeWidth="1"
    x={0}
    y={0}
  />
  <RNSVGGroup
    fill={
      Array [
        0,
        1,
        0,
        0,
        1,
      ]
    }
    fillOpacity={1}
    fillRule={1}
    font={Object {}}
    matrix={
      Array [
        1,
        0,
        0,
        1,
        0,
        0,
      ]
    }
    opacity={1}
    originX={0}
    originY={0}
    propList={
      Array [
        "fill",
      ]
    }
    rotation={0}
    scaleX={1}
    scaleY={1}
    skewX={0}
    skewY={0}
    stroke={null}
    strokeDasharray={null}
    strokeDashoffset={null}
    strokeLinecap={0}
    strokeLinejoin={0}
    strokeMiterlimit={4}
    strokeOpacity={1}
    strokeWidth="1"
    x={0}
    y={0}
  >
    <RNSVGPath
      d="M12 12h1.5v-1.5h-2.2c-.5 0-.8.3-.8.7v2.3H12V12zM18.7 10.5h-2.2V12H18v1.5h1.5v-2.3c0-.4-.3-.7-.8-.7zM12 16.5h-1.5v2.2c0 .5.3.8.8.8h2.2V18H12v-1.5zM18 18h-1.5v1.5h2.2c.5 0 .8-.3.8-.8v-2.2H18V18z"
      fill={
        Array [
          0,
          0,
          0,
          0,
          1,
        ]
      }
      fillOpacity={1}
      fillRule={1}
      matrix={
        Array [
          1,
          0,
          0,
          1,
          0,
          0,
        ]
      }
      opacity={1}
      originX={0}
      originY={0}
      propList={Array []}
      rotation={0}
      scaleX={1}
      scaleY={1}
      skewX={0}
      skewY={0}
      stroke={null}
      strokeDasharray={null}
      strokeDashoffset={null}
      strokeLinecap={0}
      strokeLinejoin={0}
      strokeMiterlimit={4}
      strokeOpacity={1}
      strokeWidth="1"
      x={0}
      y={0}
    />
  </RNSVGGroup>
</RNSVGSvgView>
`;
